feat: add pipeline endpoint + add unit tests batches (#6)
* feat: added get and delete endpoints

* feat: added PUT endpoint for pipeline

* docs: updated readme

* test: added first batch of unit tests for pipeline

* test: fixed 404 handling to be more consistent

* test: added batch of unit tests for pipelinepermission

* test: added batch of unit tests for gitrepository

* chore: removed old reference in comment
